// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design management large image component renders image 1`] = `
<div
  class="m-auto h-100 w-100 d-flex-center js-design-image"
>
  <img
    alt="test"
    class="img-fluid mh-100"
    src="test.jpg"
  />
</div>
`;

exports[`Design management large image component renders loading state 1`] = `
<div
  class="m-auto h-100 w-100 d-flex-center js-design-image"
  isloading="true"
>
  <img
    alt=""
    class="img-fluid mh-100"
    src=""
  />
</div>
`;
